# exam-api

./: README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/errors/: http_error.py
app/api/routes/: auth.py  questions.py  results.py  tests.py  users.py
app/core/: config.py
app/db/: db.py  generate_table.py
app/db/data/test/: create_test.py  get_test_by_id.py  get_user_tests.py  take_test.py  update_test_times.py
app/db/data/user/: create_user.py  delete_user.py  get_user_by_id.py  update_user_profile.py
app/db/entities/: answers.py  base.py  question_types.py  questions.py  result_answers.py  result_questions.py  results.py  test_progresses.py  test_questions.py  tests.py  user_tests.py  users.py
app/models/: common.py
app/models/domain/: answers.py  dbmodel.py  question_types.py  questions.py  result_answers.py  result_questions.py  results.py  rwmodel.py  tests.py  user_tests.py  users.py
app/models/schemas/: auth.py  questions.py  responses.py  tests.py  user_tests.py  users.py
app/resources/: res_msg.py  strings.py
app/services/: tests.py  users.py
app/utils/: db_helpers.py  helpers.py  jwt_helpers.py  test_helpers.py  user_helpers.py  validate_helpers.py
app/utils/aws/: dynamodb.py
